classic-with-waves/virtual-service.yml
# **NOTE**: this file is generated by `dhall-render`.
# You should NOT edit it manually, your changes will be lost.

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    product: support
    project: classic
    role: app-server
    role_group: app-server
    team: support
  name: classic-app-server-virtualservice
  namespace: classic
spec:
  hosts:
  - classic.classic.svc.cluster.local
  http:
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/incremental/ticket_events(\\.json)?$"
    name: GET:/api/v2/incremental/ticket_events
    retries:
      attempts: 1
      perTryTimeout: 59s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 59s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/internal/certificates(\\.json)?$"
    name: GET:/api/v2/internal/certificates
    retries:
      attempts: 1
      perTryTimeout: 59s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 59s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/incremental/ticket_metric_events(\\.json)?$"
    name: GET:/api/v2/incremental/ticket_metric_events
    retries:
      attempts: 1
      perTryTimeout: 59s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 59s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/incremental/tickets/cursor(\\.json)?$"
    name: GET:/api/v2/incremental/tickets/cursor
    retries:
      attempts: 1
      perTryTimeout: 59s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 59s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/incremental/tickets(\\.json)?$"
    name: GET:/api/v2/incremental/tickets
    retries:
      attempts: 1
      perTryTimeout: 59s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 59s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/incremental/users/cursor(\\.json)?$"
    name: GET:/api/v2/incremental/users/cursor
    retries:
      attempts: 1
      perTryTimeout: 59s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 59s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/incremental/users(\\.json)?$"
    name: GET:/api/v2/incremental/users
    retries:
      attempts: 1
      perTryTimeout: 59s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 59s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/rules/analysis$"
    name: GET:/rules/analysis
    retries:
      attempts: 1
      perTryTimeout: 59s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 59s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/tickets/([^/]+)/audits(\\.json)?$"
    name: GET:/api/v2/tickets/:ticket_id/audits
    retries:
      attempts: 1
      perTryTimeout: 40s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 40s
  - match:
    - method:
        exact: POST
      uri:
        regex: "/api/v2/views/preview(\\.json)?$"
    name: POST:/api/v2/views/preview
    retries:
      attempts: 1
      perTryTimeout: 40s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 40s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/ticket_forms(\\.json)?$"
    name: GET:/api/v2/ticket_forms
    retries:
      attempts: 1
      perTryTimeout: 40s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 40s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/bookmarks(\\.json)?$"
    name: GET:/api/v2/bookmarks
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/gooddata_user(\\.json)?$"
    name: GET:/api/v2/gooddata_user
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/users/([^/]+)/organization_memberships(\\.json)?$"
    name: GET:/api/v2/users/:user_id/organization_memberships
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/views/([^/]+)/execute(\\.json)?$"
    name: GET:/api/v2/views/:view_id/execute
    retries:
      attempts: 1
      perTryTimeout: 40s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 40s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/views/([^/]+)/tickets(\\.json)?$"
    name: GET:/api/v2/views/:view_id/tickets
    retries:
      attempts: 1
      perTryTimeout: 40s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 40s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/views/([^/]+)/next(\\.json)?$"
    name: GET:/api/v2/views/:view_id/next
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/search/count(\\.json)?$"
    name: GET:/api/v2/search/count
    retries:
      attempts: 1
      perTryTimeout: 25s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/search/export(\\.json)?$"
    name: GET:/api/v2/search/export
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/search/incremental(\\.json)?$"
    name: GET:/api/v2/search/incremental
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 25s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/search/incremental/count$"
    name: GET:/api/v2/search/incremental_count
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 25s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/search(\\.json)?$"
    name: GET:/api/v2/search/index
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 25s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/ticket_audits(\\.json)?$"
    name: GET:/api/v2/ticket_audits
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: PUT
      uri:
        regex: "/api/v2/ticket_fields/([^/]+)(\\.json)?$"
    name: PUT:/api/v2/ticket_fields/:ticket_field_id
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: DELETE
      uri:
        regex: "/api/v2/ticket_fields/([^/]+)(\\.json)?$"
    name: DELETE:/api/v2/ticket_fields/:ticket_field_id
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: PUT
      uri:
        regex: "/api/v2/tickets/([^/]+)/comments/([^/]+)/attacments/([^/]+)/redact(\\.json)?$"
    name: PUT:/api/v2/tickets/:ticket_id/comments/:comment_id/attachments/:attachment_id/redact
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/users/([^/]+)/tickets/requested(\\.json)?$"
    name: GET:/api/v2/users/:user_id/tickets/requested
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: PUT
      uri:
        regex: "/api/v2/tickets/([^/]+)(\\.json)?$"
    name: PUT:/api/v2/tickets/:ticket_id
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: POST
      uri:
        regex: "/api/v2/tickets(\\.json)?$"
    name: POST:/api/v2/tickets
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: POST
      uri:
        regex: "/api/v2/uploads(\\.json)?$"
    name: POST:/api/v2/uploads
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/api/v2/users/([^/]+)/related(\\.json)?$"
    name: GET:/api/v2/users/:user_id/related
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/audits/([^/]+)/email(\\.html)?$"
    name: GET:/audits/:audit_id/email
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri:
        regex: "/facebook/auth/create$"
    name: GET:/facebook/auth/create
    retries:
      attempts: 1
      perTryTimeout: 59s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 59s
  - match:
    - method:
        exact: POST
      uri:
        regex: "/sharing/tickets/([^/]+)$"
    name: POST:/sharing/tickets/:id
    retries:
      attempts: 1
      perTryTimeout: 30s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 30s
  - match:
    - method:
        exact: GET
      uri: {}
    name: default-readonly-with-retries
    retries:
      attempts: 1
      perTryTimeout: 25s
      retryOn: gateway-error
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 25s
  - match:
    - method: {}
      uri: {}
    name: default-readwrite-with-retries
    retries:
      attempts: 1
      perTryTimeout: 25s
      retryOn: connect-failure,refused-stream
      retryRemoteLocalities: true
    route:
    - destination:
        host: classic.classic.svc.cluster.local
    timeout: 25s
